re PR libgomp/32468 (number of threads in a parallel region depends on number of SECTIONs and MAX_THREADS)

PR libgomp/32468
	* sections.c (GOMP_parallel_sections_start): Only decrease
	number of threads to COUNT if dyn_var is true.
	* testsuite/libgomp.c/pr32468.c: New test.

From-SVN: r126227